--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-nav></app-nav>
 
-<app-home></app-home>
-<app-page-not-found></app-page-not-found>
-
-<app-list-items></app-list-items>
+<router-outlet></router-outlet>
