--- a/my-app/src/app/shared/components/nav/nav.component.html
+++ b/my-app/src/app/shared/components/nav/nav.component.html
@@ -1,18 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/home">{{ title }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" routerLink="/home" (click)="isCollapsed = true">{{ title }}</a>
+
+  <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+
+  <div class="collapse navbar-collapse" id="collapseExample" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/home">Home</a>
+        <a class="nav-link" routerLink="/home" (click)="isCollapsed = true">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/list">List</a>
+        <a class="nav-link" routerLink="/items/list" (click)="isCollapsed = true">List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add</a>
+        <a class="nav-link" href="#" (click)="isCollapsed = true">Add</a>
       </li>
     </ul>
   </div>
