FormsModule and Output, EventEmitter

--- a/my-app/src/app/shared/components/nav/nav.component.html
+++ b/my-app/src/app/shared/components/nav/nav.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="/items/list" (click)="isCollapsed = true">List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="isCollapsed = true">Add</a>
+        <a class="nav-link" routerLink="/items/add" (click)="isCollapsed = true">Add</a>
       </li>
     </ul>
   </div>
