--- a/my-app/src/app/items/containers/add/add.component.html
+++ b/my-app/src/app/items/containers/add/add.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <app-form (data)="addItem($event)"></app-form>
+  <!--<app-form (data)="addItem($event)"></app-form>-->
+  <app-reactive-form (data)="addItem($event)"></app-reactive-form>
 </div>
