tp form connection and authguard

--- a/my-app/src/app/home/containers/home/home.component.html
+++ b/my-app/src/app/home/containers/home/home.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-  <p>
-    Welcome on my pure Angular application !
-  </p>
+  <app-form-connect (data)="signIn($event)"></app-form-connect>
 </div>
