--- a/my-app/src/app/shared/components/nav/nav.component.html
+++ b/my-app/src/app/shared/components/nav/nav.component.html
@@ -17,6 +17,11 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/items/add" (click)="isCollapsed = true">Add</a>
       </li>
+      <li class="nav-item" *ngIf="signInService.auth" (click)="signInService.signOut()">
+        <button type="button" class="btn btn-primary btn-sm">
+          <span class="icon-lock"></span>
+        </button>
+      </li>
     </ul>
   </div>
 </nav>
